dmie/static/style.css
:root {
  --title-height: 70px;
}


body, html {
  font-family: Arial, sans-serif;
  background-color: #c5c5c5;
  height: 100%;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {text-decoration: none; color:#333}
a:hover {color: inherit;}
a:visited {color: inherit;}

/* Title */
.title {
  display: flex;
  justify-content: center;
  align-items: center;
  height: var(--title-height);
  background-color: #333;
  color: white;
  font-size: 30px;
  font-weight: bold;
  width: 100%;
}

/* content */

.content__default {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px 40px;
}


/* Navigation menu */
/* Create a button to open the navigation */
.open-button {
  position: absolute;
  background-color: #333;
  color: white;
  height: var(--title-height);
  padding: calc(var(--title-height) / 4) calc(var(--title-height) / 2);
  border: none;
  border-radius: 2px;
  cursor: pointer;
  font-size: 30px;
}

/* Style the navigation menu container */
.nav-container {
  position: fixed;
  left: -300px;
  top: 0;
  width: 300px;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
  overflow-x: hidden;
  transition: 0.3s;
  z-index: 1;
  backdrop-filter: blur(5px); /* Apply a blur effect to the page content */
}

/* Show the navigation menu when it's open */
.nav-container.open {
  left: 0;
}

/* Style the navigation menu content */
.nav-content {
  padding: 10px;
  color: white;
  text-decoration: none;
  height: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

/* Style the navigation user info */
.nav-user-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px 0;
}

/* Style the navigation user info image */
.nav-user-info__img {
  object-fit: cover;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background-color: white;
  margin-bottom: 10px;
}

/* Style the navigation links */
.nav-links {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

/* Style the navigation links items */
.nav-links__item {
  padding: 10px 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.nav-links__item > span {
  margin-left: 20px;
}

/* Close button style */
.close-button {
  position: absolute;
  top: 10px;
  right: 10px;
  color: white;
  font-size: 40px;
  cursor: pointer;
}

